Solved an overflow bug on mobile

--- a/src/assets/styles/globals/boilerplates.scss
+++ b/src/assets/styles/globals/boilerplates.scss
@@ -22,7 +22,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  height: 100dvh;
   background-image: url(/images/black.jpg);
   // background-repeat: no-repeat;
 }
